# subspace-desktop

./: .env  .env-sample  .eslintignore  .eslintrc.json  .gitignore  .prettierrc  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  jest.config.js  package.json  quasar.conf.js  startLocalClient.sh  tsconfig.json  typedoc.json
.github/workflows/: buildosx.yml  ci-tests.yml  discord.yml  main-backup.yml  main.yml  publish.yml  webdriver.yml
docs/: testing_for_devs.md
src/: App.vue  index.template.html
src-pwa/: register-service-worker.js
src-tauri/: Cargo.toml  build.rs  chain-spec-raw.json  chain-spec.json  entitlements.plist  rust-toolchain.toml  rustfmt.toml  tauri.conf.json  tauri.opencl.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: farmer.rs  linux.rs  main.rs  menu.rs  node.rs  utils.rs  windows.rs
src/boot/: init.ts
src/components/: OptionsComponent.vue  SaveKeys.vue  directoryDialogs.ts  disclaimer.vue  errorModal.vue  farmedList.vue  introModal.vue  mainMenu.vue  mnemonicModal.vue  netCard.vue  plotCard.vue  userkeysModal.vue
src/css/: app.sass
src/i18n/: en.json  index.ts
src/layouts/: MainLayout.vue
src/lib/: appConfig.ts  appData.ts  applescript.ts  autoLauncher.ts  blockStorage.ts  client.ts  config.ts  constants.ts  global.ts  native.ts  plotDir.ts  tauri.ts  types.ts  updater.ts  util.ts
src/lib/autoLaunch/: fileUtils.ts  linuxAutoLaunch.ts  macAutoLaunch.ts  nullAutoLaunch.ts  winAutoLaunch.ts
src/lib/customTypes/: customTypes.json  types.ts
src/lib/directories/: appDir.ts  configFile.ts  dialogs.ts
src/lib/osUtils/: applescript-parser.js  applescript.ts
src/lib/util/: index.ts  tauri.ts  util.ts
src/loc/: en.json  en.ts  lang.ts
src/mocks/: FarmedBlock.json  index.ts
src/pages/: AccountSetup.vue  Advanced.vue  Dashboard.vue  Error404.vue  ErrorPage.vue  ImportKey.vue  Index.vue  PlottingProgress.vue  SaveKeys.vue  SetPassword.vue  SetupPlot.vue
src/router/: index.ts  routes.ts
src/stores/: index.ts  store.ts
src/tests/: autoLauncher.test.ts  config.test.ts  store.test.ts
webdriver/: package.json  wdio.conf.js
webdriver/tests/: example.e2e.js
