[package]
name = "subspace-desktop"
version = "0.6.7"
description = "Subspace desktop"
authors = ["Subspace Labs <https://subspace.network>"]
license = "Apache-2.0"
repository = "https://github.com/subspace/subspace-desktop"
edition = "2021"

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/subspace/substrate", rev = "5f0aa1feb7250ac7b8c1b9928f87b2420b530e22" }
tauri-build = { version = "1.0.0-rc.9", features = [] }

[dependencies]
anyhow = "1.0.44"
cirrus-runtime = { git = "https://github.com/subspace/subspace", rev = "3c3a48f865cfe0a2510512bc75e4bae099e27aae" }
dirs = "4.0.0"
dotenv = "0.15.0"
event-listener-primitives = "2.0.1"
fdlimit = "0.2.1"
fs2 = "0.4.3"
hex = "0.4.3"
log = "0.4.14"
sc-chain-spec = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "5f0aa1feb7250ac7b8c1b9928f87b2420b530e22" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "5f0aa1feb7250ac7b8c1b9928f87b2420b530e22" }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", rev = "5f0aa1feb7250ac7b8c1b9928f87b2420b530e22", features = ["wasmtime"] }
sc-network = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", rev = "5f0aa1feb7250ac7b8c1b9928f87b2420b530e22" }
sc-service = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", rev = "5f0aa1feb7250ac7b8c1b9928f87b2420b530e22", features = ["wasmtime"] }
sc-subspace-chain-specs = { git = "https://github.com/subspace/subspace", rev = "3c3a48f865cfe0a2510512bc75e4bae099e27aae" }
serde_json = "1.0.81"
serde = { version = "1.0.137", features = [ "derive" ] }
sp-core = { version = "6.0.0", git = "https://github.com/subspace/substrate", rev = "5f0aa1feb7250ac7b8c1b9928f87b2420b530e22" }
sp-panic-handler = { version = "4.0.0", git = "https://github.com/subspace/substrate", rev = "5f0aa1feb7250ac7b8c1b9928f87b2420b530e22" }
subspace-core-primitives = { git = "https://github.com/subspace/subspace", rev = "3c3a48f865cfe0a2510512bc75e4bae099e27aae" }
subspace-farmer = { git = "https://github.com/subspace/subspace", rev = "3c3a48f865cfe0a2510512bc75e4bae099e27aae" }
subspace-fraud-proof = { git = "https://github.com/subspace/subspace", rev = "3c3a48f865cfe0a2510512bc75e4bae099e27aae" }
subspace-runtime = { git = "https://github.com/subspace/subspace", rev = "3c3a48f865cfe0a2510512bc75e4bae099e27aae" }
subspace-service = { git = "https://github.com/subspace/subspace", rev = "3c3a48f865cfe0a2510512bc75e4bae099e27aae" }
subspace-solving = { git = "https://github.com/subspace/subspace", rev = "3c3a48f865cfe0a2510512bc75e4bae099e27aae" }
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.31"
tracing-bunyan-formatter = "0.3.2"
tracing-subscriber = "0.3.11"

[dependencies.libp2p]
version = "0.44.0"
default-features = false
features = [
    "dns-tokio",
    "gossipsub",
    "identify",
    "kad",
    "noise",
    "ping",
    "sr25519",
    "tcp-tokio",
    "websocket",
    "yamux"
]


[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"

[dependencies.tauri]
features = ["api-all", "gtk-tray", "system-tray"]
version = "1.0.0-rc.11"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.dev]
opt-level = 3

[patch.crates-io]
# TODO: Remove once chacha20poly1305 0.10 appears in libp2p's dependencies
chacha20poly1305 = { git = "https://github.com/RustCrypto/AEADs", rev = "06dbfb5571687fd1bbe9d3c9b2193a1ba17f8e99" }
# TODO: Remove once https://github.com/sitano/merkle_light/pull/8 is released
merkle_light = { git = "https://github.com/sitano/merkle_light", rev = "fe31d4ef27a1fbe54e82ab589b610ae4bfd2008e" }
libp2p = { git = "https://github.com/subspace/rust-libp2p", branch = "add-sr25519-keys-v44" }
