[package]
name = "subspace-desktop"
version = "0.6.11"
description = "Subspace desktop"
authors = ["Subspace Labs <https://subspace.network>"]
license = "Apache-2.0"
repository = "https://github.com/subspace/subspace-desktop"
edition = "2021"

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/subspace/substrate", rev = "1a7c28721fa77ecce9632ad9ce473f2d3cf1a598" }
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
anyhow = "1.0.58"
cirrus-runtime = { git = "https://github.com/subspace/subspace", rev = "b30ca37d34da30148f370dc16f93cc606f19c40d" }
dirs = "4.0.0"
dotenv = "0.15.0"
fdlimit = "0.2.1"
fs2 = "0.4.3"
futures = "0.3.21"
sc-chain-spec = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "1a7c28721fa77ecce9632ad9ce473f2d3cf1a598" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "1a7c28721fa77ecce9632ad9ce473f2d3cf1a598" }
sc-consensus-slots = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", rev = "1a7c28721fa77ecce9632ad9ce473f2d3cf1a598" }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", rev = "1a7c28721fa77ecce9632ad9ce473f2d3cf1a598", features = ["wasmtime"] }
sc-network = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", rev = "1a7c28721fa77ecce9632ad9ce473f2d3cf1a598" }
sc-service = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", rev = "1a7c28721fa77ecce9632ad9ce473f2d3cf1a598", default-features = false, features = ["wasmtime"] }
sc-subspace-chain-specs = { git = "https://github.com/subspace/subspace", rev = "b30ca37d34da30148f370dc16f93cc606f19c40d" }
serde = { version = "1.0.143", features = [ "derive" ] }
serde_json = "1.0.83"
sp-core = { version = "6.0.0", git = "https://github.com/subspace/substrate", rev = "1a7c28721fa77ecce9632ad9ce473f2d3cf1a598" }
sp-panic-handler = { version = "4.0.0", git = "https://github.com/subspace/substrate", rev = "1a7c28721fa77ecce9632ad9ce473f2d3cf1a598" }
subspace-core-primitives = { git = "https://github.com/subspace/subspace", rev = "b30ca37d34da30148f370dc16f93cc606f19c40d" }
subspace-farmer = { git = "https://github.com/subspace/subspace", rev = "b30ca37d34da30148f370dc16f93cc606f19c40d" }
subspace-fraud-proof = { git = "https://github.com/subspace/subspace", rev = "b30ca37d34da30148f370dc16f93cc606f19c40d" }
subspace-networking = { git = "https://github.com/subspace/subspace", rev = "b30ca37d34da30148f370dc16f93cc606f19c40d" }
subspace-runtime = { git = "https://github.com/subspace/subspace", rev = "b30ca37d34da30148f370dc16f93cc606f19c40d" }
subspace-runtime-primitives = { git = "https://github.com/subspace/subspace", rev = "b30ca37d34da30148f370dc16f93cc606f19c40d" }
subspace-service = { git = "https://github.com/subspace/subspace", rev = "b30ca37d34da30148f370dc16f93cc606f19c40d" }
subspace-solving = { git = "https://github.com/subspace/subspace", rev = "b30ca37d34da30148f370dc16f93cc606f19c40d" }
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.31"
tracing-appender = "0.2"
tracing-bunyan-formatter = "0.3.2"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

# TODO: below is here for feature unification (ubuntu22.04 does not have openssl1.1 and it is creating problems for us, attohttpc is the dependency)
openssl = { version = "0.10.40", features = ["vendored"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"

[dependencies.tauri]
features = [ "clipboard-all", "dialog-all", "fs-all", "global-shortcut-all", "notification-all", "os-all", "path-all", "process-exit", "process-relaunch", "shell-execute", "system-tray", "updater", "window-all"]
version = "1.0.5"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
opencl = ["subspace-farmer/opencl"]

[profile.dev]
opt-level = 3

[profile.production]
inherits = "release"
lto = "fat"
codegen-units = 1

[patch.crates-io]
# TODO: Remove once chacha20poly1305 0.10 appears in libp2p's dependencies
chacha20poly1305 = { git = "https://github.com/RustCrypto/AEADs", rev = "06dbfb5571687fd1bbe9d3c9b2193a1ba17f8e99" }
libp2p = { git = "https://github.com/subspace/rust-libp2p", branch = "subspace-v3" }
# if https://github.com/tokio-rs/tracing/pull/2284 merges, we can get rid of the below
# we need these, since tracing does not have keep-last-n-logs feature yet
tracing = { git = "https://github.com/subspace/tracing-keep-last-n-logs", branch = "v0.1.x" }
tracing-core = { git = "https://github.com/subspace/tracing-keep-last-n-logs", branch = "v0.1.x" }
tracing-appender = { git = "https://github.com/subspace/tracing-keep-last-n-logs", branch = "v0.1.x" }
tracing-subscriber = { git = "https://github.com/subspace/tracing-keep-last-n-logs", branch = "v0.1.x" }
